# zls

./: .gitignore  .gitinfo  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker.yml  release.yml  test.yml
benches/: zls_benchmarks.rs
public/: index.html
public/criterion/directory_reading/10/report/: index.html
public/criterion/directory_reading/100/report/: index.html
public/criterion/directory_reading/50/report/: index.html
public/criterion/directory_reading/500/report/: index.html
public/criterion/directory_reading/parallel/report/: index.html
public/criterion/directory_reading/report/: index.html
public/criterion/directory_reading/sequential/report/: index.html
public/criterion/file_info_creation/batch_files/base/: estimates.json  sample.json
public/criterion/file_info_creation/batch_files/new/: benchmark.json  tukey.json
public/criterion/file_info_creation/batch_files/report/: index.html
public/criterion/file_info_creation/report/: index.html
public/criterion/file_info_creation/single_file/base/: estimates.json  tukey.json
public/criterion/file_info_creation/single_file/new/: benchmark.json  sample.json
public/criterion/file_info_creation/single_file/report/: index.html
public/criterion/format_size/0/report/: index.html
public/criterion/format_size/report/: index.html
public/criterion/format_time/report/: index.html
public/criterion/report/: index.html
public/criterion/sorting/report/: index.html
src/: main.rs
tests/: integration_tests.rs
(+171 files in other folders)
