[package]
name = "zls"
version = "0.1.0"
edition = "2021"
authors = ["zuedev"]
description = "A fast ls replacement written in Rust"

[[bin]]
name = "zls"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }

[[bench]]
name = "zls_benchmarks"
harness = false